--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ name="videoplayer"
 version="0.1.0"
 description="Smart Rewind Video Player for Accessibility Interventions"
 dependencies=[
-    "pyqt5"
+    "pyqt5",
+    "pysrt"
 ]
 
 [build-system]
