--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ version="0.1.0"
 description="Smart Rewind Video Player for Accessibility Interventions"
 dependencies=[
     "pyqt5",
-    "pysrt"
+    "pysrt",
+    "qtawesome"
 ]
 
 [build-system]
